tests/NormalTests/paczka2/big_fuzzy/22776704.err
Error in line 1: S857 A118 29,5
Error in line 4: 2Ep7UAPm A118 86,2
Error in line 7: 7N3VX4A A258 94,7
Error in line 11: 7N3VX4A A410 17,7
Error in line 6: S857 A258 5,6
Error in line 13: 7N3VX4A A258 12,5
Error in line 14: S857 A118 82,9
Error in line 25: Ks4FHZ6Ub A410 68,6
Error in line 44: 2Ep7UAPm A410 4,2
Error in line 50: 1z0obWg A258 13,5
Error in line 58: Ks4FHZ6Ub A258 43,9
Error in line 61: Ks4FHZ6Ub A118 69,3
Error in line 65: lMJP2 S857 229,0
Error in line 76: S857 A118 -2,6
Error in line 71: 7N3VX4A A410 20,5
Error in line 73: S857 A118 72,4
Error in line 69: Ks4FHZ6Ub A410 97,6
Error in line 79: S857 S857 25,2
Error in line 94: S857 A258 7,0
Error in line 104: 2Ep7UAPm A410 29,7
Error in line 97: S857 S857 39,6
Error in line 108: 2Ep7UAPm A258 5,8
Error in line 99: lMJP2 A118 47,5
Error in line 119: 7N3VX4A A410 90,4
Error in line 127: 7N3VX4A A258 37,63
Error in line 106: iZmjp7 S857 128,8
Error in line 133: S857 A118 7,7
Error in line 135: 7N3VX4A A258 27,2
Error in line 140: 7N3VX4A S857 58,6
Error in line 146: S857 A258 211,9
Error in line 149: 2Ep7UAPm A258 89,6
Error in line 165: 1z0obWg A258 95,9
Error in line 170: S857 A410 58,9
Error in line 171: S857 A258 31,6
Error in line 173: S857 A118 65,0
Error in line 175: 7N3VX4A A118 46,9
Error in line 187: Ks4FHZ6Ub A410 58,3
Error in line 191: Ks4FHZ6Ub A258 43,5
Error in line 199: Ks4FHZ6Ub A410 -1,1
Error in line 196: Ks4FHZ6Ub A410 91,4
Error in line 200: Ks4FHZ6Ub S857 18,4
Error in line 209: Ks4FHZ6Ub A410 89,4
Error in line 211: 1z0obWg S857 8,9
Error in line 207: 7N3VX4A A118 69,3
Error in line 230: lMJP2 A258 99,4
Error in line 234: 2Ep7UAPm A410 35,4
